tests/machine/x/kotlin/group_by_conditional_sum.error
line 27:
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:27:37: error: expecting property name or receiver type
        __res.add(if (x.flag) x.val else 0)
                                    ^
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:27:41: error: expecting ','
        __res.add(if (x.flag) x.val else 0)
                                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:33:24: error: expecting property name or receiver type
        __res.add(x.val)
                       ^
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:33:25: error: expecting ')'
        __res.add(x.val)
                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:27:19: error: 'if' must have both main and 'else' branches if used as an expression
        __res.add(if (x.flag) x.val else 0)
                  ^
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:27:25: error: unresolved reference: flag
        __res.add(if (x.flag) x.val else 0)
                        ^
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:30:3: error: none of the following functions can be called with the arguments supplied: 
@JvmName public fun Iterable<Byte>.sum(): Int defined in kotlin.collections
@JvmName public fun Iterable<Double>.sum(): Double defined in kotlin.collections
@JvmName public fun Iterable<Float>.sum(): Float defined in kotlin.collections
@JvmName public fun Iterable<Int>.sum(): Int defined in kotlin.collections
@JvmName public fun Iterable<Long>.sum(): Long defined in kotlin.collections
@JvmName public fun Iterable<Short>.sum(): Int defined in kotlin.collections
@JvmName @SinceKotlin @ExperimentalUnsignedTypes public fun Iterable<UByte>.sum(): UInt defined in kotlin.collections
@JvmName @SinceKotlin @ExperimentalUnsignedTypes public fun Iterable<UInt>.sum(): UInt defined in kotlin.collections
@JvmName @SinceKotlin @ExperimentalUnsignedTypes public fun Iterable<ULong>.sum(): ULong defined in kotlin.collections
@JvmName @SinceKotlin @ExperimentalUnsignedTypes public fun Iterable<UShort>.sum(): UInt defined in kotlin.collections
}.sum() / run {
  ^
/workspace/mochi/tests/machine/x/kotlin/group_by_conditional_sum.kt:39:17: error: unresolved reference: key
}.sortedBy { it.key as Comparable<Any> }
                ^

 26:     for (x in g) {
 27:         __res.add(if (x.flag) x.val else 0)
 28:     }
